fix hello h3 not center aligned on firefox

--- a/scss/index.scss
+++ b/scss/index.scss
@@ -18,11 +18,12 @@ html, body {
   }
 }
 
-.hello {
+.hello-text {
+  text-align: center;
   font-family: "ProximaNova-Extrabold", sans-serif;
   font-size: 24vw;
   line-height: 24vw;
-  margin-top: -5px;
+  // margin-top: -5px;
 }
 
 .contact-text {
